--- a/info.html
+++ b/info.html
@@ -6,7 +6,7 @@
 </head> 
 	<body>
         <div class="maindiv">
-		<form action="index.php" method="POST">
+		<form action="info.php" method="POST">
 		Name:<br><input type="text" name="name"><br>
 		Address:<br><input type="text" name="addr"><br>
 		E-mail id:<br><input type="text" name="email"><br>
